Backend bugs fixed

--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,16 @@
-MAIL_HOST=
-MAIL_USER=
-MAIL_PASS=
-JWT_SECRET=
-RAZORPAY_KEY=
-RAZORPAY_SECRET=""
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=mukulnayak2004@gmail.com
+MAIL_PASS=nayak0131
+
+DB_URL="mongodb+srv://mukulnayak2004:nayak0131@cluster0.ixrlqw5.mongodb.net/Studium"
+PORT=4000
+
+JWT_SECRET="mukul"
+
+RAZORPAY_KEY=rzp_test_2wQZ1YHSUdGAwi
+RAZORPAY_SECRET=4WwqZs7PfY3mmwKIHykf0DfO
+
+CLOUD_NAME=dwderiy3e
+API_KEY=345185851696531
+API_SECRET=hNcCDIwyNIZi9RMHDL43Ed9g6aY
+FOLDER_NAME="Studium"
